--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+
 <body>
     <h1>This is a recipe website!</h1>
+    <ol>
+        <li><a href='recipe-types/butter-chicken.html'>Butter Chicken Recipe</a></li>
+    </ol>
 </body>
+
 </html>
