--- a/recipe-types/biryani.html
+++ b/recipe-types/biryani.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Butter Chicken Recipe</h1>
-    <img src="../images/butter-chicken.jpg" alt="A picture of Butter Chicken">
+    <img src="../images/biryani.jpg" alt="A picture of Biryani">
 </body>
 </html>
