--- a/recipe-types/jalebi.html
+++ b/recipe-types/jalebi.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Butter Chicken Recipe</h1>
-    <img src="../images/butter-chicken.jpg" alt="A picture of Butter Chicken">
+    <img src="../images/jalebi.jpg" alt='A picture of Jalebi'>   
 </body>
 </html>
