Add links to 3 pages
which were supposed to be added in previous commit!

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
     <h1>This is a recipe website!</h1>
-    <ol>
-        <li><a href='recipe-types/butter-chicken.html'>Butter Chicken Recipe</a></li>
-    </ol>
+    <a href='recipe-types/butter-chicken.html'>Butter Chicken Recipe</a><br><br>
+    <a href='recipe-types/biryani.html'>Biryani Recipe</a><br><br>
+    <a href='recipe-types/jalebi.html'>Jalebi Recipe</a>
 </body>
 
 </html>
