Update names of dishes

--- a/recipe-types/jalebi.html
+++ b/recipe-types/jalebi.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Butter Chicken Recipe</h1>
+    <h1>Jalebi Recipe</h1>
     <img src="../images/jalebi.jpg" alt='A picture of Jalebi'>   
 </body>
 </html>
