--- a/recipe-types/biryani.html
+++ b/recipe-types/biryani.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Butter Chicken Recipe</h1>
+    <h1>Biryani Recipe</h1>
     <img src="../images/biryani.jpg" alt="A picture of Biryani">
 </body>
 </html>
