Add description of each dish in 2-5 lines.

--- a/recipe-types/biryani.html
+++ b/recipe-types/biryani.html
@@ -7,5 +7,9 @@
 <body>
     <h1>Biryani Recipe</h1>
     <img src="../images/biryani.jpg" alt="A picture of Biryani">
+    <h2>Description</h2>
+    <p>Biryani is a mixed rice dish originating among the royal khansamas of the</p>
+    <p>durbar of Old Delhi, under the Mughal Empire, during the late 16th century</p>
+    <p>of the then Mughal Court.</p>
 </body>
-</html>
+</html> </p>
