--- a/recipe-types/butter-chicken.html
+++ b/recipe-types/butter-chicken.html
@@ -7,5 +7,10 @@
 <body>
     <h1>Butter Chicken Recipe</h1>
     <img src="../images/butter-chicken.jpg" alt="A picture of Butter Chicken">
+    <h2>Description</h2>
+    <p>This butter chicken recipe, or chicken makhani, is one of my favorite Indian dishes.</p> 
+    <p>It features a full-flavored sauce that complements the chicken well.</p>
+    <p>It can be made as mild or spicy as you wish by adjusting the cayenne.</p>
+    <p>Serve with basmati rice and naan bread.</p>
 </body>
 </html>
