--- a/recipe-types/jalebi.html
+++ b/recipe-types/jalebi.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Jalebi Recipe</h1>
-    <img src="../images/jalebi.jpg" alt='A picture of Jalebi'>   
+    <img src="../images/jalebi.jpg" alt='A picture of Jalebi'>
+    <h2>Description</h2>
+    <p>The south Asian variety is made by deep-frying maida flour</p>
+    <p>(plain flour or all-purpose flour) batter in pretzel or</p>
+    <p>circular shapes, which are then soaked in sugar syrup.</p>
+    <p>Jalebi is eaten with curd or rabri (in North India) along</p>
+    <p>with optional other flavors such as kewra (scented water).</p>
 </body>
+
 </html>
