Add description, ingredients and steps headings

--- a/recipe-types/biryani.html
+++ b/recipe-types/biryani.html
@@ -11,5 +11,23 @@
     <p>Biryani is a mixed rice dish originating among the royal khansamas of the</p>
     <p>durbar of Old Delhi, under the Mughal Empire, during the late 16th century</p>
     <p>of the then Mughal Court.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Chicken 500gm</li>
+        <li>Rice</li>
+        <li>Curd</li>
+        <li>Spices</li>
+        <li>Desi Ghee</li>
+        <li>Vegies</li>
+    </ul>
+    <h2>Steps:-</h2>
+    <ol>
+        <li>Wash the meat and vegies properly.</li>
+        <li>Cut the vegies and meat into appropriate sizes.</li>
+        <li>Marinate the chicken for 2 hours</li>
+        <li>After marination, cook it with spices</li>
+        <li>Layer the cooked meat with rice and let it cook slowly.</li>
+        <li>Tasty biryani is ready!</li>
+    </ol>
 </body>
 </html> </p>
