--- a/recipe-types/butter-chicken.html
+++ b/recipe-types/butter-chicken.html
@@ -12,5 +12,22 @@
     <p>It features a full-flavored sauce that complements the chicken well.</p>
     <p>It can be made as mild or spicy as you wish by adjusting the cayenne.</p>
     <p>Serve with basmati rice and naan bread.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Chicken 500gm</li>
+        <li>Butter</li>
+        <li>Curd</li>
+        <li>Spices</li>
+        <li>Cream</li>
+        <li>Vegies</li>
+    </ul>
+    <h2>Steps:-</h2>
+    <ol>
+        <li>Wash the meat and vegies properly.</li>
+        <li>Cut the vegies and meat into appropriate sizes.</li>
+        <li>Marinate the chicken for 2 hours</li>
+        <li>After marination, cook it with spices</li>
+        <li>Tasty butter chicken is ready!</li>
+    </ol>
 </body>
 </html>
