--- a/recipe-types/jalebi.html
+++ b/recipe-types/jalebi.html
@@ -15,6 +15,24 @@
     <p>circular shapes, which are then soaked in sugar syrup.</p>
     <p>Jalebi is eaten with curd or rabri (in North India) along</p>
     <p>with optional other flavors such as kewra (scented water).</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Maida(flour)</li>
+        <li>Oil</li>
+        <li>Spices</li>
+        <li>Sugar</li>
+        <li>Water</li>
+        <li>Saffron</li>
+    </ul>
+    <h2>Steps:-</h2>
+    <ol>
+        <li>Take measured amounts of flour.</li>
+        <li>Make a smooth batter.</li>
+        <li>Add oil in a saucepan for deep-frying</li>
+        <li>Before frying, prepare sugar-syrup in another saucepan</li>
+        <li>Start making spiral shaped jalebis and cook for 5-10mins</li>
+        <li>After they are golden brown, soak them in sugar-syrup</li>
+        <li>Hot and crisp jalebis are ready!</li>
+    </ol>
 </body>
-
 </html>
