Place 3 links in index.html in an unordered list

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
 <body>
     <h1>This is a recipe website!</h1>
-    <a href='recipe-types/butter-chicken.html'>Butter Chicken Recipe</a><br><br>
-    <a href='recipe-types/biryani.html'>Biryani Recipe</a><br><br>
-    <a href='recipe-types/jalebi.html'>Jalebi Recipe</a>
+    <ul>
+    <li><a href='recipe-types/butter-chicken.html'>Butter Chicken Recipe</a></li><br>
+    <li><a href='recipe-types/biryani.html'>Biryani Recipe</a></li><br>
+    <li><a href='recipe-types/jalebi.html'>Jalebi Recipe</a></li>
+    </ul>
 </body>
 
 </html>
